--- a/style.css
+++ b/style.css
@@ -4,25 +4,63 @@ body {
   
   .hero-banner {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    max-height: 500px;
+    height: 600px;
     position: relative;
     overflow: hidden;
   }
   
   .hero-banner img {
     width: 100%;
-    height: 80%;
-    object-fit: cover; 
-    filter: brightness(35%); 
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(25%);
   }
   
   .hero-text {
-    position: absolute; /* Overlays on top of the image */
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    flex-wrap: wrap;
     color: white;
     z-index: 1;
     padding: 20px;
-    max-width: 800px;
+    width: 100%;
+    box-sizing: border-box;
+  }
+  
+  .white-logo-banner {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    width: 100%;
+    top: 4%;
+  }
+  
+  .white-logo-banner img {
+    flex-wrap: wrap;
+    max-width: 100%;
+    max-height: 100%;
+    filter: brightness(100%);
+    
+  }
+  
+  @media screen and (max-width: 601px) {
+    .hero-banner {
+      height: 600px;
+      flex-wrap: wrap; 
+    }
+    
+    .white-logo-banner img {
+      width: 100px;
+      height: 100px;
+    }
   }
