--- a/style.css
+++ b/style.css
@@ -52,15 +52,105 @@ body {
     filter: brightness(100%);
     
   }
+
+  figure {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 340px;
+    /* min-width: 340px; */
+    height: 500px;
+    border-radius: 10px;
+    box-shadow: 
+      0 1px 3px rgba(0,0,0,0.12), 
+      0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    overflow: hidden;
+  }
+  
+  figure:hover {
+    box-shadow: 
+      0 14px 28px rgba(0,0,0,0.25), 
+      0 10px 10px rgba(0,0,0,0.22);
+  }
+  
+  figure:hover h1 {
+    opacity: 0;
+    transform: scale(0.7);
+  }
+  
+  figure:hover img {
+    transform: scale(1.25);
+  }
+  
+  figure:hover figcaption {
+    bottom: 0;
+  }
+  
+  figure h1 {
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    color: white;
+    opacity: 1;
+    transform: scale(1);
+    transition: 0.25s ease;
+    z-index: 999;
+  }
+  
+  figure img {
+    height: 100%;
+    transition: 0.25s;
+  }
+  
+  figure figcaption {
+    position: absolute;
+    bottom: -34%;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.85);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    color: white;
+    line-height: 1;
+    transition: 0.25s;
+  }
+  
+  figure figcaption h3 {
+    margin: 0 0 40px;
+    padding: 0;
+  }
+  
+  /* figure figcaption p {
+    font-size: 14px;
+    line-height: 1.75;
+  } */
+
   
   @media screen and (max-width: 601px) {
-    .hero-banner {
-      height: 600px;
-      flex-wrap: wrap; 
+    figure {
+        width: 300px;
+        min-height: 200px;
+        border-radius: 8px;
+        display: flex;
+        flex-wrap: wrap;
+      }
+      
+      
+      figure figcaption {
+        bottom: -50%; 
+        padding: 10%;
+        left:-8%;
+      }
+      
+      figure:hover figcaption {
+        bottom: 0;
+      }
+      .white-logo-banner img {
+        max-width: 30%;
+        max-height: 30%;
+      }
     }
-    
-    .white-logo-banner img {
-      width: 100px;
-      height: 100px;
-    }
-  }
+  
