--- a/pages/navbar.css
+++ b/pages/navbar.css
@@ -39,10 +39,10 @@ html {
 }
 
 body {
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	/* font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	font-size: 1rem;
 	font-weight: 400;
-	line-height: 1.5;
+	line-height: 1.5; */
 	color: var(--color-black);
 	background: var(--color-white);
 }
@@ -140,10 +140,11 @@ video {
 
 .menu-name {
 	display: none;
-	font-size: 0.875rem;
-	font-weight: 500;
+	/* font-size: 0.875rem; */
+	/* font-weight: 500; */
 	visibility: hidden;
 	text-transform: capitalize;
+    text-transform: uppercase;
 }
 
 @media only screen and (min-width: 360px) {
