--- a/pages/navbar.css
+++ b/pages/navbar.css
@@ -3,14 +3,14 @@
 	--color-white: hsl(0, 0%, 100%);
 	--color-darken: hsl(0, 0%, 20%);
 
-	--color-teal-100: hsl(160, 85%, 87%);
-	--color-teal-200: hsl(162, 78%, 77%);
-	--color-teal-300: hsl(162, 72%, 65%);
-	--color-teal-400: hsl(162, 68%, 54%);
-	--color-teal-500: hsl(162, 73%, 46%);
-	--color-teal-600: hsl(162, 82%, 40%);
-	--color-teal-700: hsl(162, 87%, 35%);
-	--color-teal-800: hsl(162, 88%, 30%);
+    --color-beige-100: hsl(35, 60%, 92%);
+    --color-beige-200: hsl(35, 45%, 87%);
+    --color-beige-300: hsl(35, 40%, 80%);
+    --color-tan-400: hsl(30, 38%, 72%);
+    --color-tan-500: hsl(30, 35%, 65%);
+    --color-brown-600: hsl(25, 40%, 50%);
+    --color-brown-700: hsl(20, 50%, 40%);
+    --color-brown-800: hsl(15, 55%, 30%);
 
 	--shadow-small: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
 	--shadow-medium: 0 -4px 6px -1px rgba(0, 0, 0, 0.1),
@@ -31,6 +31,12 @@
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility;
 }
+
+.lilita-one-regular {
+    font-family: "Lilita One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 
 html {
 	font-size: 100%;
@@ -75,11 +81,14 @@ video {
 }
 
 .brand {
-	font-size: 1.5rem;
+    font-family: "Lilita One", sans-serif;
+	font-size: 1rem;
 	font-weight: 700;
-	color: var(--color-teal-800);
+	color: var(--color-black);
 	text-transform: uppercase;
 }
+
+
 
 .header {
 	position: fixed;
@@ -129,7 +138,7 @@ video {
 
 .menu-link.is-active {
 	position: relative;
-	color: var(--color-teal-800);
+	color: var(--color-brown-800);
 	transition: all 0.35s ease;
 }
 
@@ -199,11 +208,11 @@ video {
 		bottom: 0;
 		width: 2rem;
 		height: 2px;
-		background: var(--color-teal-800);
+		background: var(--color-brown-800);
 	}
 
 	.menu-link:hover {
-		color: var(--color-teal-800);
+		color: var(--color-brown-800);
 		transition: all 0.35s ease;
 	}
 
