--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
     flex-wrap: wrap;
     box-sizing: border-box;
     width: 100%;
-    top: 4%;
+    top: 15%;
   }
   
   .white-logo-banner img {
@@ -62,8 +62,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* padding: 2rem; */
-    width: 100vh;
+    padding: 2rem;
+    max-width: 1200px;
     margin: 0 auto;
     width:100%;
   }
@@ -131,14 +131,15 @@ body {
   
   figure figcaption {
     position: absolute;
-    bottom: -31%;
+    bottom: -38%;
     width: 100%;
-    padding: 30px;
+    padding: 20px;
     background-color: rgba(0, 0, 0, 0.85);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
     color: white;
     line-height: 1;
     transition: 0.25s;
+    line-height: 2.5;
   }
 
 
