--- a/pages/buttons.css
+++ b/pages/buttons.css
@@ -4,15 +4,15 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 20px; 
+    gap: 1rem; 
 
 }
 .btn {
     line-height: 50px;
-    height: 50px;
     text-align: center;
     width: 250px;
     cursor: pointer;
+    
   }
   
   /* 
@@ -85,8 +85,8 @@
     border: none;
     color: #fff;
     cursor: pointer;
-    background-color: #ff7f50;
-    transition: all 0.3s ease;
+    background-color: #5E3322;
+    transition: all 1s ease;
   }
   
   .button-two:active {
@@ -107,19 +107,19 @@
   
   .button-two:hover:before {
     top: -70%;
-    background-image: radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, transparent 20%, #ff7f50 20%, transparent 30%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, transparent 10%, #ff7f50 15%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%);
+    background-image: radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, transparent 20%, #594545 20%, transparent 30%),
+      radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, transparent 10%, #594545 15%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%);
     background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%,
       10% 10%, 18% 18%;
     background-position: 50% 120%;
-    animation: orangeTopBubbles 0.6s ease;
+    animation: orangeTopBubbles 1s ease;
   }
   
   @keyframes orangeTopBubbles {
@@ -142,16 +142,16 @@
   
   .button-two:hover::after {
     bottom: -70%;
-    background-image: radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, transparent 10%, #ff7f50 15%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%),
-      radial-gradient(circle, #ff7f50 20%, transparent 20%);
+    background-image: radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, transparent 10%, #594545 15%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%),
+      radial-gradient(circle, #594545 20%, transparent 20%);
     background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 20% 20%, 18% 18%;
     background-position: 50% 0%;
-    animation: orangeBottomBubbles 0.6s ease;
+    animation: orangeBottomBubbles 1s ease;
   }
   
   @keyframes orangeBottomBubbles {
