--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     padding: 20px;
     width: 100%;
     box-sizing: border-box;
+    gap:2rem;
   }
   
   .white-logo-banner {
@@ -68,7 +69,6 @@ body {
     width:100%;
   }
 
-  /* Container for the figures */
   .figures-container {
     display: flex;
     flex-wrap: wrap;
@@ -131,7 +131,7 @@ body {
   
   figure figcaption {
     position: absolute;
-    bottom: -38%;
+    bottom: -20%;
     width: 100%;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.85);
@@ -148,7 +148,8 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background-color: blanchedalmond;
-    padding: 2rem;
+    padding: 3rem;
+    gap:0.1rem;
     
 }
 
@@ -162,7 +163,6 @@ body {
     gap:4%;
 }
 
-/* Text Container (50% width on desktop, 100% on mobile) */
 .bedge-text-right,
 .bedge-text-left {
     width: 45%;
@@ -170,12 +170,14 @@ body {
     flex-direction: column;
     justify-content: center;
     box-sizing: border-box; 
+    gap:2rem;
 }
 
 .bedge-image-right,
 .bedge-image-left {
     width: 45%;
     box-sizing: border-box;
+    gap:2rem;
 }
 
 .bedge-image-right img,
@@ -195,91 +197,7 @@ body {
 
 
   
-  @media screen and (max-width: 601px) {
-    .hero-banner{
-        height: 800px;
-    }
 
-    figure {
-        width: 300px;
-        min-height: 200px;
-        border-radius: 8px;
-        display: flex;
-        flex-wrap: wrap;
-      }
-
-      figure h1 {
-        left: 10px;
-      }
-      
-      
-      figure figcaption {
-        bottom: -60%; 
-        padding: 10%;
-        left:-8%;
-      }
-      
-      figure:hover figcaption {
-        bottom: 0;
-      }
-      .white-logo-banner {
-        min-width: 50%;
-      }
-    }
-   
-
-    @media screen and (max-width: 768px) {
-        .hero-banner{
-            height: 800px;
-        }
-        .white-logo-banner {
-            max-width: 30%;
-            min-width: 25%;
-            max-height: 30%;
-          } 
-
-          figure {
-            width: 300px;
-            min-height: 200px;
-            border-radius: 8px;
-            display: flex;
-            flex-wrap: wrap;
-          }
-    
-          figure h1 {
-            left: 15px;
-          }
-          
-          
-          figure figcaption {
-            bottom: -32%; 
-            padding: 10%;
-            left:-8%;
-          }
-
-          figure figcaption h3 {
-            margin: 0 0 50px;
-            padding: 0;
-            /* font-size: 15px; */
-          }
-          .bedge-right,
-          .bedge-left {
-              flex-direction: column; /* Stack vertically on mobile */
-          }
-      
-          .bedge-text-right,
-          .bedge-text-left,
-          .bedge-image-right,
-          .bedge-image-left {
-              width: 100%; /* Full width on mobile */
-          }
-      
-          /* Reset order for mobile (text first, image second) */
-          .bedge-left .bedge-text-left,
-          .bedge-left .bedge-image-left {
-              order: initial; /* Default order */
-          }
-      }
 
 
       footer {
@@ -339,7 +257,104 @@ body {
         border-top: 1px solid #444;
     }
 
-
+    @media screen and (max-width: 601px) {
+        .hero-banner{
+            height: 800px;
+        }
+    
+        figure {
+            width: 300px;
+            min-height: 200px;
+            border-radius: 8px;
+            display: flex;
+            flex-wrap: wrap;
+            
+          }
+    
+          figure h1 {
+            left: 10px;
+    
+          }
+          
+          
+          figure figcaption {
+            bottom: -60%; 
+            /* padding: 10%;
+            left:-8%; */
+          }
+          
+          figure:hover figcaption {
+            bottom: 0;
+          }
+          .white-logo-banner {
+            min-width: 50%;
+          }
+        }
+       
+    
+        @media screen and (max-width: 768px) {
+            .hero-banner{
+                height: 800px;
+            }
+            .white-logo-banner {
+                max-width: 30%;
+                min-width: 25%;
+                max-height: 30%;
+              } 
+    
+              figure {
+                width: 300px;
+                min-height: 200px;
+                border-radius: 8px;
+                display: flex;
+                flex-wrap: wrap;
+              }
+        
+              figure h1 {
+                left: 15px;
+              }
+              
+              
+              figure figcaption {
+                bottom: -32%; 
+                /* padding: 10%;
+                left:-8%; */
+              }
+    
+              figure figcaption h3 {
+                margin: 0 0 50px;
+                padding: 0;
+              }
+    
+              .bedge-right,
+              .bedge-left {
+                display: flex;
+                flex-direction: column; 
+                margin-bottom: 2rem;
+              }
+          
+              .bedge-text-right,
+              .bedge-text-left,
+              .bedge-image-right,
+              .bedge-image-left {
+                  width: 100%; 
+                  margin-bottom: 2rem;
+              }
+    
+              .bedge-image-right,
+              .bedge-image-left {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                    
+    
+              .bedge-left .bedge-text-left,
+              .bedge-left .bedge-image-left {
+                  order: initial;
+                
+              }
+          }
 
     @media screen and (max-width: 1024px) {
         .hero-banner{
@@ -350,9 +365,9 @@ body {
             max-height: 30%;
           }
           figure figcaption {
-            /* bottom: -40%;  */
-            padding: 10%;
-            left:-8%;
+            bottom: -33%; 
+            /* padding: 10%;
+            left:-8%; */
           }
 
           figure figcaption h3 {
@@ -360,6 +375,7 @@ body {
             padding: 0;
             /* font-size: 16px; */
           }
+          
     }
     @media screen and (max-width: 1200px) {
         .white-logo-banner {
