--- a/style.css
+++ b/style.css
@@ -43,11 +43,13 @@ body {
     flex-wrap: wrap;
     box-sizing: border-box;
     width: 100%;
-    top: 15%;
+    top: 20%;
   }
   
   .white-logo-banner img {
     flex-wrap: wrap;
+    width:150px;
+    height: 150px;
     max-width: 100%;
     max-height: 100%;
     filter: brightness(100%);
@@ -83,7 +85,8 @@ body {
     align-items: center;
     justify-content: center;
     max-width: 320px;
-    max-height: 450px;
+    max-height: 600px;
+    height: 440px;
     border-radius: 10px;
     box-shadow: 
       0 1px 3px rgba(0,0,0,0.12), 
@@ -131,7 +134,7 @@ body {
   
   figure figcaption {
     position: absolute;
-    bottom: -20%;
+    bottom: -40%;
     width: 100%;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.85);
@@ -305,6 +308,7 @@ body {
               figure {
                 width: 300px;
                 min-height: 200px;
+                
                 border-radius: 8px;
                 display: flex;
                 flex-wrap: wrap;
@@ -364,6 +368,9 @@ body {
             max-width: 25%;
             max-height: 30%;
           }
+
+
+
           figure figcaption {
             bottom: -33%; 
             /* padding: 10%;
