--- a/pages/navbar.css
+++ b/pages/navbar.css
@@ -44,17 +44,25 @@
     font-weight: 400;
     font-style: normal;
 }
+
+.abel-small {
+    font-family: "Abel", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
 html {
-	font-size: 80%;
+	font-size: 100%;
 	box-sizing: inherit;
 	scroll-behavior: smooth;
+    
 }
 
 body {
 	font-family: "Abel", sans-serif;
-	font-size: 0.5rem;
-	font-weight: 400;
-	line-height: 2; 
+    font-size:rem;
+	line-height: 1; 
 	color: var(--color-black);
 	background: var(--color-white);
 }
@@ -62,7 +70,6 @@ body {
 a,
 button {
 	font-family: inherit;
-	font-size: inherit;
 	line-height: inherit;
 	cursor: pointer;
 	border: none;
@@ -83,16 +90,16 @@ video {
 	max-width: 75rem;
 	height: auto;
 	margin: 0 auto;
-	padding: 0 1.25rem;
+	padding: 0 1.5rem;
 }
 
 .brand {
     font-family: "Inter", sans-serif;
     letter-spacing: 0.1em;
-	font-size: 1rem;
 	font-weight: 700;
 	color: var(--color-black);
 	text-transform: uppercase;
+    /* font-size: 1.1rem; */
 }
 
 
@@ -111,7 +118,7 @@ video {
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
-	height: 4rem;
+	height: 5rem;
 }
 
 .menu {
@@ -121,10 +128,8 @@ video {
 	display: grid;
 	align-content: center;
 	width: 100%;
-	height: 3.5rem;
+	height: 4.0rem;
 	padding: 0 1rem;
-	border-top-left-radius: 1.5rem;
-	border-top-right-radius: 1.5rem;
 	background: var(--color-white);
 	box-shadow: var(--shadow-medium);
 }
@@ -150,26 +155,28 @@ video {
 }
 
 .menu-icon {
-    width: 24px; /* Fixed width */
-    height: 24px; /* Fixed height */
-    border-radius: 0; /* Removes circular rounding */
-    background: transparent; /* Ensures no background circle */
+    width: 24px; 
+    height: 24px; 
+    border-radius: 0; 
+    background: transparent; 
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.35rem; /* Adjust icon size if needed */
+    font-size: 1.35rem; 
     color: inherit;
     transition: all 0.3s ease;
 }
 
 .menu-name {
 	display: none;
-	font-size: 0.4rem;
-	font-weight: 400;
 	visibility: hidden;
-	text-transform: capitalize;
+	/* text-transform: capitalize; */
     text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: 400;
 }
+
+
 
 @media only screen and (min-width: 360px) {
 	.menu-name {
@@ -185,7 +192,6 @@ video {
 		justify-content: center;
 		column-gap: 4rem;
         margin-top: 1%;
-        /* margin-bottom: 2%; */
 	}
 }
 
@@ -252,6 +258,5 @@ video {
 		font-size: 1.5rem;
 		font-weight: 500;
 		margin-bottom: 1rem;
-        /* margin-top: 1rem; */
 	}
 }
