--- a/pages/navbar.css
+++ b/pages/navbar.css
@@ -87,7 +87,7 @@ video {
 }
 
 .container {
-	max-width: 75rem;
+	width: 100%;
 	height: auto;
 	margin: 0 auto;
 	padding: 0 1.5rem;
@@ -119,6 +119,7 @@ video {
 	align-items: center;
 	width: 100%;
 	height: 5rem;
+	padding: 0 1rem;
 }
 
 .menu {
@@ -129,7 +130,7 @@ video {
 	align-content: center;
 	width: 100%;
 	height: 4.0rem;
-	padding: 0 1rem;
+	padding: 0 0.5rem;
 	background: var(--color-white);
 	box-shadow: var(--shadow-medium);
 }
@@ -138,6 +139,7 @@ video {
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
+	width: 100%;
 }
 
 .menu-link {
@@ -146,6 +148,9 @@ video {
 	align-items: center;
 	justify-content: center;
 	color: var(--color-black);
+	padding: 0.5rem;
+	flex: 1;
+	min-width: 0;
 }
 
 .menu-link.is-active {
@@ -177,11 +182,11 @@ video {
 }
 
 
-
 @media only screen and (min-width: 360px) {
 	.menu-name {
 		display: block;
 		visibility: visible;
+		
 	}
 
 
@@ -190,7 +195,7 @@ video {
 @media only screen and (min-width: 576px) {
 	.menu-list {
 		justify-content: center;
-		column-gap: 4rem;
+		column-gap: 1rem;
         margin-top: 1%;
 	}
 }
