--- a/pages/navbar.css
+++ b/pages/navbar.css
@@ -61,7 +61,7 @@ html {
 
 body {
 	font-family: "Abel", sans-serif;
-    font-size:rem;
+    font-size:1rem;
 	line-height: 1; 
 	color: var(--color-black);
 	background: var(--color-white);
@@ -99,7 +99,9 @@ video {
 	font-weight: 700;
 	color: var(--color-black);
 	text-transform: uppercase;
-    /* font-size: 1.1rem; */
+	display: flex;
+	justify-content: flex-start;
+   
 }
 
 
@@ -120,6 +122,12 @@ video {
 	width: 100%;
 	height: 5rem;
 	padding: 0 1rem;
+}
+
+.navbar-left {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
 .menu {
