--- a/pages/about.css
+++ b/pages/about.css
@@ -185,6 +185,21 @@
   margin: 0;
 }
 
+@keyframes pageEntrance {
+	from {
+		transform: translateX(-100%);
+		opacity: 0;
+	}
+	to {
+		transform: translateX(0);
+		opacity: 1;
+	}
+}
+
+body {
+	animation: pageEntrance 1s ease-in-out;
+}
+
 @media (max-width: 768px) {
   .wrapper {
     flex-wrap: wrap;
