--- a/pages/contact.css
+++ b/pages/contact.css
@@ -238,6 +238,21 @@ select::-ms-expand {
   color: #F2F3EB;
 }
 
+@keyframes pageEntrance {
+	from {
+		transform: translateX(-100%);
+		opacity: 0;
+	}
+	to {
+		transform: translateX(0);
+		opacity: 1;
+	}
+}
+
+body {
+	animation: pageEntrance 1s ease-in-out;
+}
+
 @media screen and (max-width: 768px) {
   #container {
     margin: 20px auto;
