changing jpg png to webp

--- a/pages/produts.css
+++ b/pages/produts.css
@@ -96,17 +96,17 @@
   
   .container--1 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(255,255,255,0.1)), 
-                     url('/components/photos/jar-huge.png');
+                     url('/components/photos/jar-huge.webp');
   }
   
   .container--2 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(255,255,255,0.1)), 
-                     url('/components/photos/jar-medium.png');
+                     url('/components/photos/jar-medium.webp');
   }
   
   .container--3 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(255,255,255,0.1)), 
-                     url('/components/photos/jar-small.png');
+                     url('/components/photos/jar-small.webp');
   }
   
   .container-products p {
